--- a/github/workflows/snake.yml
+++ b/github/workflows/snake.yml
@@ -12,12 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # Snake Animation
-      - uses: Sutil/snk@master
+      - uses: Scorpionn69/Scorpionn69
         id: snake-gif
         with:
-          github_user_name: ${{ github.repository_owner }}
+          github_user_name: ${{ github.Scorpionn69 }}
           svg_out_path: dist/github-contribution-grid-snake2.svg
-          snake_color: 'blue'
+          snake_color: 'black'
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
